Introduce the use of quarkus-wiremock
Relates to: #446